<resources>
    <string name="app_name">Quiz App</string>
    <string name="todo">todo</string>
    <string name="quizzy_app">QUIZZY APP</string>
    <string name="let_s_play_this_awesome_quiz_app_to_enhance_your_knowladge">Let\'s play this awesome quiz app to enhance your knowladge</string>
    <string name="all_items">All items</string>
    <string name="android">Android</string>
    <string name="all_about_android_os">All about Android OS</string>
    <string name="todo1">TODO</string>
    <string name="_20min">20min</string>
    <string name="question_7_20">Question 7/20</string>
    <string name="_5_46">5:46</string>
    <string name="what_is_android_os">What is android OS?</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="next">Next</string>
    <string name="congrats_you_have_passed">Congrats! you have passed</string>
    <string name="_50">50%</string>
    <string name="_6_out_of_10_questions_are_correct">6 out of 10 questions are correct</string>
    <string name="finish">Finish</string>
    <string name="congrats_you_have_passed1">Congrats! you have passed</string>
    <string name="oops_you_have_failed">Oops! you have failed</string>
    <string name="congrats_you_have_passed2">Congrats! you have passed1</string>
    <string name="oops_you_have_failled1">Oops! You have failled</string>
    <string name="score_out_of_are_correct">$ score out of %1$s are correct</string>
</resources>