<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Quiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_7_20"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:id="@+id/question_indicator"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_access_time_24"
            android:layout_centerVertical="true"
            app:tint="#FF9800"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/timer_indecator"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_46"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#1849DD"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/timer_indecator"/>
    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:progress="40"
        android:id="@+id/question_progress_indicator"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/what_is_android_os"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:backgroundTint="#064F70"
                android:background="@drawable/round_corner"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginVertical="8dp"
                android:id="@+id/question_textView"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="#E3CDCD"
                android:text="@string/a"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:id="@+id/bTn1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="#E3CDCD"
                android:text="@string/b"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:id="@+id/bTn2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="#E3CDCD"
                android:text="@string/c"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:id="@+id/bTn3"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="#E3CDCD"
                android:text="@string/d"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:id="@+id/bTn4"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:backgroundTint="#FF9800"
                android:text="@string/next"
                android:textColor="@color/white"
                android:paddingVertical="12dp"
                android:paddingHorizontal="40dp"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:id="@+id/next_bTn"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>