<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/image"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#1D3EF1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizzy_app"
            android:gravity="center"
            android:textColor="@color/white"
            android:letterSpacing="0.1"
            android:textSize="34sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_play_this_awesome_quiz_app_to_enhance_your_knowladge"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:letterSpacing="0.1"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_items"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress_bar"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/recyclur_view"/>
    </RelativeLayout>
</LinearLayout>